Fixing alignment issues for responsive.

--- a/system/cms/themes/pyrocms/css/workless.css
+++ b/system/cms/themes/pyrocms/css/workless.css
@@ -783,7 +783,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 
 /* Alerts */
 .alert {
-  width: 100%;
+  width: 250px;
   background-color: rgba(0, 0, 0, 0.15);
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.15)));
@@ -1952,7 +1952,7 @@ Ensure your main styling comes before this!
 		float: left; 
 	}
 
-	.one_third { 
+	/*.one_third { 
 		width: 450px; 
 		float: left; 
 	}
@@ -1970,7 +1970,7 @@ Ensure your main styling comes before this!
 	.three_quarter {
 		width: 450px;
 		float: left;
-	}
+	}*/
 	
 	#quick_links ul li {
 		width: 75px;
@@ -1986,24 +1986,28 @@ Ensure your main styling comes before this!
 		right: 0;
 	}
 	
+	.alert {
+		width: 450px;
+	}
+	
 }
 
-@media only screen and (min-width: 769px) {	
+@media only screen and (min-width: 768px) {	
 
 	.wrapper {
-		width: 768px;
+		width: 750px;
 		margin: 0 auto;
 	}
 	
 	#container {
-		width: 768px;
+		width: 750px;
 		height: 100%;
 		min-height: 100%;
 		margin: 0 auto;
 		padding: 0;
 	}
 
-	section.title, section.item {width: 738px;}
+	section.title, section.item {width: 720px;}
 	
 	#logo {
 		display: inherit;
@@ -2037,35 +2041,38 @@ Ensure your main styling comes before this!
 	}
 	
 	section#content {
-		width: 768px;
+		width: 750px;
 		padding: 0;
 		margin: 150px 0 150px 0;
 		float: left;
 	}
 	
 	.one_full { 
-		width: 768px; 
+		width: 750px; 
 		margin: 0; 
 		float: left; 
 	}
 
-	.one_half { 
-		width: 349px; 
+	.one_half {
+		width: 365px; 
 		margin-right: 15px; 
 		float: left; 
 	}
+	.one_half section.title, .one_half section.item {width: 335px;}
 
-	.one_third { 
-		width: 350px; 
+	/*.one_third { 
+		width: 250px; 
 		margin-right: 15px; 
 		float: left; 
 	}
+	.one_third section.title, .one_third section.item {width: 220px;}
 
 	.two_third { 
-		width: 786px; 
+		width: 500px; 
 		margin-right: 15px; 
 		float: left; 
 	}
+	.two_third section.title, .two_third section.item {width: 470px;}
 
 	.one_quarter { 
 		width: 230px; 
@@ -2076,7 +2083,7 @@ Ensure your main styling comes before this!
 	.three_quarter {
 		width: 520px;
 		float: left;
-	}
+	}*/
 
 	#quick_links ul li {
 		width: 75px;
@@ -2093,9 +2100,6 @@ Ensure your main styling comes before this!
 	ul#lang {
 		float: right;
 		margin-right: 0;
-		padding-right: 0;
-		text-align: left;
-		width: 30%;
 	}
 	
 	fieldset {padding: 25px; margin: 5px 0 15px 0;}
@@ -2111,6 +2115,10 @@ Ensure your main styling comes before this!
 		margin-bottom: 0;
 	}
 	.subbar h2, .subbar h2 a {font-size: 28px;}
+
+	.alert {
+		width: 720px;
+	}
 
 }
 
@@ -2157,7 +2165,7 @@ Ensure your main styling comes before this!
 	}
 	
 	section#content {
-		width: 1000px;
+		width: 1024px;
 		padding: 0;
 		margin: 150px 0 150px 0;
 		float: left;
@@ -2170,12 +2178,13 @@ Ensure your main styling comes before this!
 	}
 
 	.one_half { 
-		width: 465px; 
-		margin-right: 15px; 
+		width: 500px; 
+		margin-right: 10px;
 		float: left; 
 	}
+	.one_half section.title, .one_half section.item {width: 470px;}
 
-	.one_third { 
+	/*.one_third { 
 		width: 350px; 
 		margin-right: 15px; 
 		float: left; 
@@ -2196,18 +2205,17 @@ Ensure your main styling comes before this!
 	.three_quarter {
 		width: 750px;
 		float: left;
-	}
+	}*/
 
 	#quick_links ul li {
 		width: 75px;
 		float: left;
 		margin: 3px 18px 0 18px;
-	}
+	}	
 
-	ul#lang {
-		margin-right: -54px;
+	.alert {
+		width: 995px;
 	}
-	
 
 }
 
@@ -2217,7 +2225,7 @@ Ensure your main styling comes before this!
 		width: 1280px;
 		margin: 0 auto;
 	}
-	
+		
 	#container {
 		width: 1280px;
 		height: 100%;
@@ -2250,29 +2258,31 @@ Ensure your main styling comes before this!
 	}
 	
 	#analyticsWrapper, #analytics {
-		width: 1212px;	
+		width: 1280px;	
 	}
 	
 	section#content {
-		width: 1230px;
+		width: 1280px;
 		padding: 0;
 		margin: 170px 0 150px 0;
 		float: left;
 	}
 	
 	.one_full { 
-		width: 1230px; 
+		width: 1280px; 
 		margin: 0; 
 		float: left; 
 	}
+	.one_full section.title, .one_full section.item {width: 1250px;}
 
 	.one_half { 
-		width: 580px; 
-		margin-right: 15px; 
+		width: 625px; 
+		margin-right: 10px;
 		float: left; 
 	}
+	.one_half section.title, .one_half section.item {width: 595px;}
 
-	.one_third { 
+	/*.one_third { 
 		width: 350px; 
 		margin-right: 15px; 
 		float: left; 
@@ -2293,7 +2303,7 @@ Ensure your main styling comes before this!
 	.three_quarter {
 		width: 975px;
 		float: left;
-	}
+	}*/
 
 	#quick_links ul li {
 		width: 75px;
@@ -2301,8 +2311,8 @@ Ensure your main styling comes before this!
 		margin: 3px 35px 0 35px;
 	}
 
-	ul#lang {
-		margin-right: -105px;
+	.alert {
+		width: 1250px;
 	}
 	
 }
@@ -2319,7 +2329,7 @@ Non-semantic helper classes
 */
 
 /* Last class to remove margin and change float */
-.last { margin-right: 0; float: right; }
+.last { margin-right: 0!important; float: right; }
 
 /* Some colors */
 .muted { color: #e6e6e6; }
